Cleanup and simplify the build